--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 </div>
   <div class="contact">
     <h2>Contact Us</h2>
-    <p>📞 Phone: +91 98765 43210</p>
-    <p>📧 Email: childrencare@gmail.com</p>
+    <p>📞 Phone: +91 88074 96177</p>
+    <p>📧 Email: childrencare123@gmail.com</p>
     <p>📍 Address: No. 123, Kids Avenue, Vellore, India</p>
   </div>
   <footer>
@@ -67,3 +67,4 @@
 
 </body>
 </html>
+
